
AUTOMAKE_OPTIONS = foreign

SUBDIRS = qt-core qt-gui qt-svg qt-opengl

noinst_HEADERS = modules/qt-core/QC_QObject.h \
	modules/qt-core/QoreAbstractQObject.h \
	modules/qt-core/QoreAbstractQAbstractItemModel.h \
	modules/qt-core/qore-qt-metacode.h \
	modules/qt-core/qt-core.h \
	modules/qt-core/QC_QRect.h \
	modules/qt-core/QC_QRectF.h \
	modules/qt-core/QC_QPoint.h \
	modules/qt-core/QC_QSize.h \
	modules/qt-core/QC_QEvent.h \
	modules/qt-core/QC_QDateTime.h \
	modules/qt-core/QC_QDate.h \
	modules/qt-core/QC_QTime.h \
	modules/qt-core/QC_QPointF.h \
	modules/qt-core/QC_QLine.h \
	modules/qt-core/QC_QLineF.h \
	modules/qt-core/QC_QAbstractItemModel.h \
	modules/qt-core/QC_QLocale.h \
	modules/qt-core/QC_QByteArray.h \
	modules/qt-core/QC_QUrl.h \
	modules/qt-core/QC_QVariant.h \
	modules/qt-core/QC_QChar.h \
	modules/qt-core/QC_QDir.h \
	modules/qt-core/QC_QRegExp.h \
	modules/qt-core/QC_QMetaObject.h \
	modules/qt-core/QC_QFileInfo.h \
	modules/qt-core/QC_QTimer.h \
	modules/qt-core/QC_QBasicTimer.h \
	modules/qt-core/QC_QChildEvent.h \
	modules/qt-core/QC_QMimeData.h \
	modules/qt-core/QC_QTimerEvent.h \
	modules/qt-core/QC_QLibraryInfo.h \
	modules/qt-core/QC_QCoreApplication.h \
	modules/qt-core/QC_QModelIndex.h \
	modules/qt-core/QC_QTranslator.h \
	modules/qt-core/QC_QTimeLine.h \
	modules/qt-core/QC_QIODevice.h \
	modules/qt-core/QoreAbstractQIODevice.h \
	modules/qt-core/QoreAbstractQCoreApplication.h \
	modules/qt-core/QoreQtDynamicMethod.h \
	modules/qt-core/QoreQtEventDispatcher.h \
	modules/qt-gui/QC_QApplication.h \
	modules/qt-gui/QC_QPushButton.h \
	modules/qt-gui/QC_QFont.h \
	modules/qt-gui/QC_QMatrix.h \
	modules/qt-gui/QC_QWidget.h \
	modules/qt-gui/QC_QFrame.h \
	modules/qt-gui/QC_QLCDNumber.h \
	modules/qt-gui/QC_QAbstractSlider.h \
	modules/qt-gui/QC_QSlider.h \
	modules/qt-gui/QC_QBoxLayout.h \
	modules/qt-gui/QC_QVBoxLayout.h \
	modules/qt-gui/QC_QHBoxLayout.h \
	modules/qt-gui/QC_QLayout.h \
	modules/qt-gui/QC_QGridLayout.h \
	modules/qt-gui/QoreAbstractQLayout.h \
	modules/qt-gui/QoreAbstractQBoxLayout.h \
	modules/qt-gui/QoreAbstractQWidget.h \
	modules/qt-gui/QoreAbstractQFrame.h \
	modules/qt-gui/QoreAbstractQAbstractSlider.h \
	modules/qt-gui/QoreAbstractQPixmap.h \
	modules/qt-gui/QoreAbstractQPaintDevice.h \
	modules/qt-gui/QoreAbstractQAbstractButton.h \
	modules/qt-gui/QoreAbstractQAbstractItemDelegate.h \
	modules/qt-gui/QoreAbstractQItemDelegate.h \
	modules/qt-gui/QoreAbstractQAbstractSpinBox.h \
	modules/qt-gui/QoreAbstractQDateTimeEdit.h \
	modules/qt-gui/QoreAbstractQGroupBox.h \
	modules/qt-gui/QoreAbstractQAbstractScrollArea.h \
	modules/qt-gui/QoreAbstractQComboBox.h \
	modules/qt-gui/QoreAbstractQMenu.h \
	modules/qt-gui/QoreAbstractQPushButton.h \
	modules/qt-gui/QoreAbstractQAction.h \
	modules/qt-gui/QoreAbstractQToolButton.h \
	modules/qt-gui/QoreAbstractQDialog.h \
	modules/qt-gui/QoreAbstractQCheckBox.h \
	modules/qt-gui/QoreAbstractQScrollBar.h \
	modules/qt-gui/QoreAbstractQRadioButton.h \
	modules/qt-gui/QoreAbstractQMotifStyle.h \
	modules/qt-gui/QoreAbstractQWindowsStyle.h \
	modules/qt-gui/QoreAbstractQCleanlooksStyle.h \
	modules/qt-gui/QoreAbstractQValidator.h \
	modules/qt-gui/QoreAbstractQPaintEngine.h \
	modules/qt-gui/QoreAbstractQTabBar.h \
	modules/qt-gui/qore-qt-qvalidator-methods.h \
	modules/qt-gui/qore-qt-events.h \
	modules/qt-gui/qore-qt-widget-events.h \
	modules/qt-gui/qore-qt-qabstractitemdelegate-methods.h \
	modules/qt-gui/qore-qt-qstyle-methods.h \
	modules/qt-gui/qore-qt-qdialog-methods.h \
	modules/qt-gui/qore-qt-qlayoutitem-methods.h \
	modules/qt-gui/qore-qt-qlayout-methods.h \
	modules/qt-gui/qore-qt-qgraphicsitem-methods.h \
	modules/qt-gui/QC_QBrush.h \
	modules/qt-gui/QC_QColor.h \
	modules/qt-gui/QC_QPaintDevice.h \
	modules/qt-gui/QC_QRegion.h \
	modules/qt-gui/QC_QPainter.h \
	modules/qt-gui/QC_QPalette.h \
	modules/qt-gui/QC_QPaintEvent.h \
	modules/qt-gui/QC_QInputEvent.h \
	modules/qt-gui/QC_QMouseEvent.h \
	modules/qt-gui/QC_QKeyEvent.h \
	modules/qt-gui/QC_QMoveEvent.h \
	modules/qt-gui/QC_QResizeEvent.h \
	modules/qt-gui/QC_QLabel.h \
	modules/qt-gui/QC_QPicture.h \
	modules/qt-gui/QC_QPixmap.h \
	modules/qt-gui/QC_QMovie.h \
	modules/qt-gui/QC_QBitmap.h \
	modules/qt-gui/QC_QShortcut.h \
	modules/qt-gui/qore-qt-gui.h \
	modules/qt-gui/QC_QIcon.h \
	modules/qt-gui/QC_QKeySequence.h \
	modules/qt-gui/QC_QAction.h \
	modules/qt-gui/QC_QActionGroup.h \
	modules/qt-gui/BrushStyleNode.h \
	modules/qt-gui/PenStyleNode.h \
	modules/qt-gui/QC_QPolygon.h \
	modules/qt-gui/QC_QPolygonF.h \
	modules/qt-gui/QC_QAbstractButton.h \
	modules/qt-gui/QC_QMenu.h \
	modules/qt-gui/QC_QToolButton.h \
	modules/qt-gui/QC_QDialog.h \
	modules/qt-gui/QC_QLineEdit.h \
	modules/qt-gui/QC_QTextLength.h \
	modules/qt-gui/QC_QTextFormat.h \
	modules/qt-gui/QC_QTextBlockFormat.h \
	modules/qt-gui/QC_QTextCharFormat.h \
	modules/qt-gui/QC_QPen.h \
	modules/qt-gui/QC_QTextFrameFormat.h \
	modules/qt-gui/QC_QTextTableFormat.h \
	modules/qt-gui/QC_QTextListFormat.h \
	modules/qt-gui/QC_QTextImageFormat.h \
	modules/qt-gui/QC_QCalendarWidget.h \
	modules/qt-gui/QC_QStyleOption.h \
	modules/qt-gui/QC_QStyleOptionViewItem.h \
	modules/qt-gui/QC_QStyleOptionViewItemV2.h \
	modules/qt-gui/QC_QAbstractItemDelegate.h \
	modules/qt-gui/QC_QItemDelegate.h \
	modules/qt-gui/QC_QComboBox.h \
	modules/qt-gui/QC_QCheckBox.h \
	modules/qt-gui/QC_QAbstractSpinBox.h \
	modules/qt-gui/QC_QDateTimeEdit.h \
	modules/qt-gui/QC_QGroupBox.h \
	modules/qt-gui/QC_QDateEdit.h \
	modules/qt-gui/QC_QFontMetrics.h \
	modules/qt-gui/QC_QFontDatabase.h \
	modules/qt-gui/QC_QFontInfo.h \
	modules/qt-gui/QC_QScrollBar.h \
	modules/qt-gui/QC_QAbstractScrollArea.h \
	modules/qt-gui/QC_QScrollArea.h \
	modules/qt-gui/QC_QActionEvent.h \
	modules/qt-gui/QC_QCloseEvent.h \
	modules/qt-gui/QC_QContextMenuEvent.h \
	modules/qt-gui/QC_QDropEvent.h \
	modules/qt-gui/QC_QDragMoveEvent.h \
	modules/qt-gui/QC_QDragEnterEvent.h \
	modules/qt-gui/QC_QDragLeaveEvent.h \
	modules/qt-gui/QC_QFocusEvent.h \
	modules/qt-gui/QC_QHideEvent.h \
	modules/qt-gui/QC_QInputMethodEvent.h \
	modules/qt-gui/QC_QShowEvent.h \
	modules/qt-gui/QC_QTabletEvent.h \
	modules/qt-gui/QC_QWheelEvent.h \
	modules/qt-gui/QC_QClipboard.h \
	modules/qt-gui/QC_QFontComboBox.h \
	modules/qt-gui/QC_QMainWindow.h \
	modules/qt-gui/QC_QRadioButton.h \
	modules/qt-gui/QC_QStyle.h \
	modules/qt-gui/QoreAbstractQStyle.h \
	modules/qt-gui/QC_QStyleOptionComplex.h \
	modules/qt-gui/QC_QStyleOptionComboBox.h \
	modules/qt-gui/QC_QStyleOptionGroupBox.h \
	modules/qt-gui/QC_QStyleOptionSizeGrip.h \
	modules/qt-gui/QC_QStyleOptionSlider.h \
	modules/qt-gui/QC_QStyleOptionSpinBox.h \
	modules/qt-gui/QC_QStyleOptionTitleBar.h \
	modules/qt-gui/QC_QStyleOptionToolButton.h \
	modules/qt-gui/QC_QMotifStyle.h \
	modules/qt-gui/QC_QCDEStyle.h \
	modules/qt-gui/QC_QWindowsStyle.h \
	modules/qt-gui/QC_QCleanlooksStyle.h \
	modules/qt-gui/QC_QMacStyle.h \
	modules/qt-gui/QC_QPlastiqueStyle.h \
	modules/qt-gui/QC_QWindowsXPStyle.h \
	modules/qt-gui/QC_QSpinBox.h \
	modules/qt-gui/QC_QAbstractItemView.h \
	modules/qt-gui/QoreAbstractQAbstractItemView.h \
	modules/qt-gui/QC_QTableView.h \
	modules/qt-gui/QoreAbstractQTableView.h \
	modules/qt-gui/QC_QTableWidget.h \
	modules/qt-gui/QC_QTableWidgetItem.h \
	modules/qt-gui/QC_QStyleOptionMenuItem.h \
	modules/qt-gui/QC_QMessageBox.h \
	modules/qt-gui/QC_QStyleOptionButton.h \
	modules/qt-gui/QC_QFileDialog.h \
	modules/qt-gui/QC_QHeaderView.h \
	modules/qt-gui/QoreAbstractQHeaderView.h \
	modules/qt-gui/QC_QMenuBar.h \
	modules/qt-gui/QoreAbstractQMenuBar.h \
	modules/qt-gui/QC_QPrinter.h \
	modules/qt-gui/QC_QPrintDialog.h \
	modules/qt-gui/QC_QValidator.h \
	modules/qt-gui/QC_QDoubleValidator.h \
	modules/qt-gui/QC_QIntValidator.h \
	modules/qt-gui/QC_QRegExpValidator.h \
	modules/qt-gui/QC_QColorDialog.h \
	modules/qt-gui/QC_QInputDialog.h \
	modules/qt-gui/QC_QImageWriter.h \
	modules/qt-gui/QC_QImage.h \
	modules/qt-gui/QC_QDial.h \
	modules/qt-gui/QC_QStackedWidget.h \
	modules/qt-gui/QC_QDoubleSpinBox.h \
	modules/qt-gui/QC_QTimeEdit.h \
	modules/qt-gui/QC_QProgressBar.h \
	modules/qt-gui/QC_QPainterPath.h \
	modules/qt-gui/QC_QPaintEngine.h \
	modules/qt-gui/QC_QTextEdit.h \
	modules/qt-gui/QoreAbstractQTextEdit.h \
	modules/qt-gui/QC_QTabBar.h \
	modules/qt-gui/QC_QStyleOptionTab.h \
	modules/qt-gui/QC_QStyleOptionTabWidgetFrame.h \
	modules/qt-gui/QC_QTabWidget.h \
	modules/qt-gui/QC_QHelpEvent.h \
	modules/qt-gui/QC_QDesktopWidget.h \
	modules/qt-gui/QC_QSystemTrayIcon.h \
	modules/qt-gui/QC_QWizard.h \
	modules/qt-gui/QC_QWizardPage.h \
	modules/qt-gui/QC_QListView.h \
	modules/qt-gui/QoreAbstractQListView.h \
	modules/qt-gui/QC_QListWidget.h \
	modules/qt-gui/QoreAbstractQListWidget.h \
	modules/qt-gui/QC_QListWidgetItem.h \
	modules/qt-gui/QC_QDialogButtonBox.h \
	modules/qt-gui/QC_QToolBar.h \
	modules/qt-gui/QC_QProgressDialog.h \
	modules/qt-gui/QC_QFontDialog.h \
	modules/qt-gui/QC_QErrorMessage.h \
	modules/qt-gui/QC_QStackedLayout.h \
	modules/qt-gui/QC_QGradient.h \
	modules/qt-gui/QC_QLinearGradient.h \
	modules/qt-gui/QC_QTextBrowser.h \
	modules/qt-gui/QC_QLayoutItem.h \
	modules/qt-gui/QoreAbstractQLayoutItem.h \
	modules/qt-gui/QC_QWidgetItem.h \
	modules/qt-gui/QC_QCursor.h \
	modules/qt-gui/QC_QStyleOptionGraphicsItem.h \
	modules/qt-gui/QC_QTransform.h \
	modules/qt-gui/QC_QGraphicsSceneEvent.h \
	modules/qt-gui/QC_QGraphicsSceneContextMenuEvent.h \
	modules/qt-gui/QC_QGraphicsSceneDragDropEvent.h \
	modules/qt-gui/QC_QGraphicsSceneHelpEvent.h \
	modules/qt-gui/QC_QGraphicsSceneHoverEvent.h \
	modules/qt-gui/QC_QGraphicsSceneMouseEvent.h \
	modules/qt-gui/QC_QGraphicsSceneWheelEvent.h \
	modules/qt-gui/QC_QSplashScreen.h \
	modules/qt-gui/QC_QSplitter.h \
	modules/qt-gui/QoreAbstractQSplitter.h \
	modules/qt-gui/QC_QSplitterHandle.h \
	modules/qt-gui/QoreAbstractQSplitterHandle.h \
	modules/qt-gui/QC_QGraphicsItem.h \
	modules/qt-gui/QoreAbstractQGraphicsItem.h \
	modules/qt-gui/QC_QAbstractGraphicsShapeItem.h \
	modules/qt-gui/QoreAbstractQAbstractGraphicsShapeItem.h \
	modules/qt-gui/QC_QGraphicsEllipseItem.h \
	modules/qt-gui/QoreAbstractQGraphicsEllipseItem.h \
	modules/qt-gui/QC_QGraphicsPathItem.h \
	modules/qt-gui/QoreAbstractQGraphicsPathItem.h \
	modules/qt-gui/QC_QGraphicsPolygonItem.h \
	modules/qt-gui/QoreAbstractQGraphicsPolygonItem.h \
	modules/qt-gui/QC_QGraphicsRectItem.h \
	modules/qt-gui/QoreAbstractQGraphicsRectItem.h \
	modules/qt-gui/QC_QGraphicsSimpleTextItem.h \
	modules/qt-gui/QoreAbstractQGraphicsSimpleTextItem.h \
	modules/qt-gui/QC_QGraphicsItemGroup.h \
	modules/qt-gui/QoreAbstractQGraphicsItemGroup.h \
	modules/qt-gui/QC_QGraphicsLineItem.h \
	modules/qt-gui/QoreAbstractQGraphicsLineItem.h \
	modules/qt-gui/QC_QGraphicsPixmapItem.h \
	modules/qt-gui/QoreAbstractQGraphicsPixmapItem.h \
	modules/qt-gui/QC_QTextLine.h \
	modules/qt-gui/QC_QTextOption.h \
	modules/qt-gui/QC_QTextLayout.h \
	modules/qt-opengl/QC_QGLWidget.h \
	modules/qt-opengl/QC_QGLFormat.h \
	modules/qt-opengl/QC_QGLContext.h \
	modules/qt-opengl/QC_QGLColormap.h \
	modules/qt-opengl/QC_QGLFramebufferObject.h \
	modules/qt-opengl/QC_QGLPixelBuffer.h \
	modules/qt-svg/QC_QSvgRenderer.h \
	modules/qt-svg/QC_QSvgGenerator.h \
	modules/qt-svg/QC_QSvgWidget.h

EXTRA_DIST = ChangeLog AUTHORS README test/ \
	test/desktop/images/bad.svg \
	test/desktop/images/heart.svg \
	test/desktop/images/trash.svg \
	test/desktop/screenshot.q \
	test/desktop/systray.q \
	test/dialogs/classwizard.q \
	test/dialogs/configdialog.q \
	test/dialogs/extension.q \
	test/dialogs/findfiles.q \
	test/dialogs/images/background.png \
	test/dialogs/images/banner.png \
	test/dialogs/images/config.png \
	test/dialogs/images/logo1.png \
	test/dialogs/images/logo2.png \
	test/dialogs/images/logo3.png \
	test/dialogs/images/query.png \
	test/dialogs/images/update.png \
	test/dialogs/images/watermark1.png \
	test/dialogs/images/watermark2.png \
	test/dialogs/standarddialogs.q \
	test/dialogs/tabdialog.q \
	test/layouts/basiclayouts.q \
	test/layouts/borderlayout.q \
	test/opengl/2dpainting.q \
	test/opengl/framebufferobject.q \
	test/opengl/framebufferobject2.q \
	test/opengl/grabber.q \
	test/opengl/hellogl.q \
	test/opengl/images/bubbles.svg \
	test/opengl/images/cubelogo.png \
	test/opengl/images/qt4-logo.png \
	test/tutorial.q \
	test/widgets/analogclock.q \
	test/widgets/calculator.q \
	test/widgets/calendarwidget.q \
	test/widgets/charactermap.q \
	test/widgets/digitalclock.q \
	test/widgets/groupbox.q \
	test/widgets/icons.q \
	test/widgets/images/circle.png \
	test/widgets/images/open.png \
	test/widgets/images/pause.png \
	test/widgets/images/play.png \
	test/widgets/images/quit.png \
	test/widgets/images/square.png \
	test/widgets/images/stop.png \
	test/widgets/images/triangle.png \
	test/widgets/images/woodbackground.png \
	test/widgets/images/woodbutton.png \
	test/widgets/imageviewer.q \
	test/widgets/lineedits.q \
	test/widgets/movieplayer.q \
	test/widgets/scribble.q \
	test/widgets/shapedclock.q \
	test/widgets/sliders.q \
	test/widgets/spinboxes.q \
	test/widgets/styles.q \
	test/widgets/tetrix.q \
	test/widgets/tooltips.q \
	test/widgets/wiggly.q \
	test/widgets/windowflags.q

