
AUTOMAKE_OPTIONS = foreign

SUBDIRS = qt-core qt-gui qt-svg qt-opengl

noinst_HEADERS = qt-core/QC_QObject.h \
	qt-core/QoreAbstractQObject.h \
	qt-core/QoreAbstractQAbstractItemModel.h \
	qt-core/qore-qt-metacode.h \
	qt-core/qt-core.h \
	qt-core/QC_QRect.h \
	qt-core/QC_QRectF.h \
	qt-core/QC_QPoint.h \
	qt-core/QC_QSize.h \
	qt-core/QC_QEvent.h \
	qt-core/QC_QDateTime.h \
	qt-core/QC_QDate.h \
	qt-core/QC_QTime.h \
	qt-core/QC_QPointF.h \
	qt-core/QC_QLine.h \
	qt-core/QC_QLineF.h \
	qt-core/QC_QAbstractItemModel.h \
	qt-core/QC_QLocale.h \
	qt-core/QC_QByteArray.h \
	qt-core/QC_QUrl.h \
	qt-core/QC_QVariant.h \
	qt-core/QC_QChar.h \
	qt-core/QC_QDir.h \
	qt-core/QC_QRegExp.h \
	qt-core/QC_QMetaObject.h \
	qt-core/QC_QFileInfo.h \
	qt-core/QC_QTimer.h \
	qt-core/QC_QBasicTimer.h \
	qt-core/QC_QChildEvent.h \
	qt-core/QC_QMimeData.h \
	qt-core/QC_QTimerEvent.h \
	qt-core/QC_QLibraryInfo.h \
	qt-core/QC_QCoreApplication.h \
	qt-core/QC_QModelIndex.h \
	qt-core/QC_QTranslator.h \
	qt-core/QC_QTimeLine.h \
	qt-core/QC_QIODevice.h \
	qt-core/QoreAbstractQIODevice.h \
	qt-core/QoreAbstractQCoreApplication.h \
	qt-core/QoreQtDynamicMethod.h \
	qt-core/QoreQtEventDispatcher.h \
	qt-gui/QC_QApplication.h \
	qt-gui/QC_QPushButton.h \
	qt-gui/QC_QFont.h \
	qt-gui/QC_QMatrix.h \
	qt-gui/QC_QWidget.h \
	qt-gui/QC_QFrame.h \
	qt-gui/QC_QLCDNumber.h \
	qt-gui/QC_QAbstractSlider.h \
	qt-gui/QC_QSlider.h \
	qt-gui/QC_QBoxLayout.h \
	qt-gui/QC_QVBoxLayout.h \
	qt-gui/QC_QHBoxLayout.h \
	qt-gui/QC_QLayout.h \
	qt-gui/QC_QGridLayout.h \
	qt-gui/QoreAbstractQLayout.h \
	qt-gui/QoreAbstractQBoxLayout.h \
	qt-gui/QoreAbstractQWidget.h \
	qt-gui/QoreAbstractQFrame.h \
	qt-gui/QoreAbstractQAbstractSlider.h \
	qt-gui/QoreAbstractQPixmap.h \
	qt-gui/QoreAbstractQPaintDevice.h \
	qt-gui/QoreAbstractQAbstractButton.h \
	qt-gui/QoreAbstractQAbstractItemDelegate.h \
	qt-gui/QoreAbstractQItemDelegate.h \
	qt-gui/QoreAbstractQAbstractSpinBox.h \
	qt-gui/QoreAbstractQDateTimeEdit.h \
	qt-gui/QoreAbstractQGroupBox.h \
	qt-gui/QoreAbstractQAbstractScrollArea.h \
	qt-gui/QoreAbstractQComboBox.h \
	qt-gui/QoreAbstractQMenu.h \
	qt-gui/QoreAbstractQPushButton.h \
	qt-gui/QoreAbstractQAction.h \
	qt-gui/QoreAbstractQToolButton.h \
	qt-gui/QoreAbstractQDialog.h \
	qt-gui/QoreAbstractQCheckBox.h \
	qt-gui/QoreAbstractQScrollBar.h \
	qt-gui/QoreAbstractQRadioButton.h \
	qt-gui/QoreAbstractQMotifStyle.h \
	qt-gui/QoreAbstractQWindowsStyle.h \
	qt-gui/QoreAbstractQCleanlooksStyle.h \
	qt-gui/QoreAbstractQValidator.h \
	qt-gui/QoreAbstractQPaintEngine.h \
	qt-gui/QoreAbstractQTabBar.h \
	qt-gui/qore-qt-qvalidator-methods.h \
	qt-gui/qore-qt-events.h \
	qt-gui/qore-qt-widget-events.h \
	qt-gui/qore-qt-qabstractitemdelegate-methods.h \
	qt-gui/qore-qt-qstyle-methods.h \
	qt-gui/qore-qt-qdialog-methods.h \
	qt-gui/qore-qt-qlayoutitem-methods.h \
	qt-gui/qore-qt-qlayout-methods.h \
	qt-gui/qore-qt-qgraphicsitem-methods.h \
	qt-gui/QC_QBrush.h \
	qt-gui/QC_QColor.h \
	qt-gui/QC_QPaintDevice.h \
	qt-gui/QC_QRegion.h \
	qt-gui/QC_QPainter.h \
	qt-gui/QC_QPalette.h \
	qt-gui/QC_QPaintEvent.h \
	qt-gui/QC_QInputEvent.h \
	qt-gui/QC_QMouseEvent.h \
	qt-gui/QC_QKeyEvent.h \
	qt-gui/QC_QMoveEvent.h \
	qt-gui/QC_QResizeEvent.h \
	qt-gui/QC_QLabel.h \
	qt-gui/QC_QPicture.h \
	qt-gui/QC_QPixmap.h \
	qt-gui/QC_QMovie.h \
	qt-gui/QC_QBitmap.h \
	qt-gui/QC_QShortcut.h \
	qt-gui/qore-qt-gui.h \
	qt-gui/QC_QIcon.h \
	qt-gui/QC_QKeySequence.h \
	qt-gui/QC_QAction.h \
	qt-gui/QC_QActionGroup.h \
	qt-gui/BrushStyleNode.h \
	qt-gui/PenStyleNode.h \
	qt-gui/QC_QPolygon.h \
	qt-gui/QC_QPolygonF.h \
	qt-gui/QC_QAbstractButton.h \
	qt-gui/QC_QMenu.h \
	qt-gui/QC_QToolButton.h \
	qt-gui/QC_QDialog.h \
	qt-gui/QC_QLineEdit.h \
	qt-gui/QC_QTextLength.h \
	qt-gui/QC_QTextFormat.h \
	qt-gui/QC_QTextBlockFormat.h \
	qt-gui/QC_QTextCharFormat.h \
	qt-gui/QC_QPen.h \
	qt-gui/QC_QTextFrameFormat.h \
	qt-gui/QC_QTextTableFormat.h \
	qt-gui/QC_QTextListFormat.h \
	qt-gui/QC_QTextImageFormat.h \
	qt-gui/QC_QCalendarWidget.h \
	qt-gui/QC_QStyleOption.h \
	qt-gui/QC_QStyleOptionViewItem.h \
	qt-gui/QC_QStyleOptionViewItemV2.h \
	qt-gui/QC_QAbstractItemDelegate.h \
	qt-gui/QC_QItemDelegate.h \
	qt-gui/QC_QComboBox.h \
	qt-gui/QC_QCheckBox.h \
	qt-gui/QC_QAbstractSpinBox.h \
	qt-gui/QC_QDateTimeEdit.h \
	qt-gui/QC_QGroupBox.h \
	qt-gui/QC_QDateEdit.h \
	qt-gui/QC_QFontMetrics.h \
	qt-gui/QC_QFontDatabase.h \
	qt-gui/QC_QFontInfo.h \
	qt-gui/QC_QScrollBar.h \
	qt-gui/QC_QAbstractScrollArea.h \
	qt-gui/QC_QScrollArea.h \
	qt-gui/QC_QActionEvent.h \
	qt-gui/QC_QCloseEvent.h \
	qt-gui/QC_QContextMenuEvent.h \
	qt-gui/QC_QDropEvent.h \
	qt-gui/QC_QDragMoveEvent.h \
	qt-gui/QC_QDragEnterEvent.h \
	qt-gui/QC_QDragLeaveEvent.h \
	qt-gui/QC_QFocusEvent.h \
	qt-gui/QC_QHideEvent.h \
	qt-gui/QC_QInputMethodEvent.h \
	qt-gui/QC_QShowEvent.h \
	qt-gui/QC_QTabletEvent.h \
	qt-gui/QC_QWheelEvent.h \
	qt-gui/QC_QClipboard.h \
	qt-gui/QC_QFontComboBox.h \
	qt-gui/QC_QMainWindow.h \
	qt-gui/QC_QRadioButton.h \
	qt-gui/QC_QStyle.h \
	qt-gui/QoreAbstractQStyle.h \
	qt-gui/QC_QStyleOptionComplex.h \
	qt-gui/QC_QStyleOptionComboBox.h \
	qt-gui/QC_QStyleOptionGroupBox.h \
	qt-gui/QC_QStyleOptionSizeGrip.h \
	qt-gui/QC_QStyleOptionSlider.h \
	qt-gui/QC_QStyleOptionSpinBox.h \
	qt-gui/QC_QStyleOptionTitleBar.h \
	qt-gui/QC_QStyleOptionToolButton.h \
	qt-gui/QC_QMotifStyle.h \
	qt-gui/QC_QCDEStyle.h \
	qt-gui/QC_QWindowsStyle.h \
	qt-gui/QC_QCleanlooksStyle.h \
	qt-gui/QC_QMacStyle.h \
	qt-gui/QC_QPlastiqueStyle.h \
	qt-gui/QC_QWindowsXPStyle.h \
	qt-gui/QC_QSpinBox.h \
	qt-gui/QC_QAbstractItemView.h \
	qt-gui/QoreAbstractQAbstractItemView.h \
	qt-gui/QC_QTableView.h \
	qt-gui/QoreAbstractQTableView.h \
	qt-gui/QC_QTableWidget.h \
	qt-gui/QC_QTableWidgetItem.h \
	qt-gui/QC_QStyleOptionMenuItem.h \
	qt-gui/QC_QMessageBox.h \
	qt-gui/QC_QStyleOptionButton.h \
	qt-gui/QC_QFileDialog.h \
	qt-gui/QC_QHeaderView.h \
	qt-gui/QoreAbstractQHeaderView.h \
	qt-gui/QC_QMenuBar.h \
	qt-gui/QoreAbstractQMenuBar.h \
	qt-gui/QC_QPrinter.h \
	qt-gui/QC_QPrintDialog.h \
	qt-gui/QC_QValidator.h \
	qt-gui/QC_QDoubleValidator.h \
	qt-gui/QC_QIntValidator.h \
	qt-gui/QC_QRegExpValidator.h \
	qt-gui/QC_QColorDialog.h \
	qt-gui/QC_QInputDialog.h \
	qt-gui/QC_QImageWriter.h \
	qt-gui/QC_QImage.h \
	qt-gui/QC_QDial.h \
	qt-gui/QC_QStackedWidget.h \
	qt-gui/QC_QDoubleSpinBox.h \
	qt-gui/QC_QTimeEdit.h \
	qt-gui/QC_QProgressBar.h \
	qt-gui/QC_QPainterPath.h \
	qt-gui/QC_QPaintEngine.h \
	qt-gui/QC_QTextEdit.h \
	qt-gui/QoreAbstractQTextEdit.h \
	qt-gui/QC_QTabBar.h \
	qt-gui/QC_QStyleOptionTab.h \
	qt-gui/QC_QStyleOptionTabWidgetFrame.h \
	qt-gui/QC_QTabWidget.h \
	qt-gui/QC_QHelpEvent.h \
	qt-gui/QC_QDesktopWidget.h \
	qt-gui/QC_QSystemTrayIcon.h \
	qt-gui/QC_QWizard.h \
	qt-gui/QC_QWizardPage.h \
	qt-gui/QC_QListView.h \
	qt-gui/QoreAbstractQListView.h \
	qt-gui/QC_QListWidget.h \
	qt-gui/QoreAbstractQListWidget.h \
	qt-gui/QC_QListWidgetItem.h \
	qt-gui/QC_QDialogButtonBox.h \
	qt-gui/QC_QToolBar.h \
	qt-gui/QC_QProgressDialog.h \
	qt-gui/QC_QFontDialog.h \
	qt-gui/QC_QErrorMessage.h \
	qt-gui/QC_QStackedLayout.h \
	qt-gui/QC_QGradient.h \
	qt-gui/QC_QLinearGradient.h \
	qt-gui/QC_QTextBrowser.h \
	qt-gui/QC_QLayoutItem.h \
	qt-gui/QoreAbstractQLayoutItem.h \
	qt-gui/QC_QWidgetItem.h \
	qt-gui/QC_QCursor.h \
	qt-gui/QC_QStyleOptionGraphicsItem.h \
	qt-gui/QC_QTransform.h \
	qt-gui/QC_QGraphicsSceneEvent.h \
	qt-gui/QC_QGraphicsSceneContextMenuEvent.h \
	qt-gui/QC_QGraphicsSceneDragDropEvent.h \
	qt-gui/QC_QGraphicsSceneHelpEvent.h \
	qt-gui/QC_QGraphicsSceneHoverEvent.h \
	qt-gui/QC_QGraphicsSceneMouseEvent.h \
	qt-gui/QC_QGraphicsSceneWheelEvent.h \
	qt-gui/QC_QSplashScreen.h \
	qt-gui/QC_QSplitter.h \
	qt-gui/QoreAbstractQSplitter.h \
	qt-gui/QC_QSplitterHandle.h \
	qt-gui/QoreAbstractQSplitterHandle.h \
	qt-gui/QC_QGraphicsItem.h \
	qt-gui/QoreAbstractQGraphicsItem.h \
	qt-gui/QC_QAbstractGraphicsShapeItem.h \
	qt-gui/QoreAbstractQAbstractGraphicsShapeItem.h \
	qt-gui/QC_QGraphicsEllipseItem.h \
	qt-gui/QoreAbstractQGraphicsEllipseItem.h \
	qt-gui/QC_QGraphicsPathItem.h \
	qt-gui/QoreAbstractQGraphicsPathItem.h \
	qt-gui/QC_QGraphicsPolygonItem.h \
	qt-gui/QoreAbstractQGraphicsPolygonItem.h \
	qt-gui/QC_QGraphicsRectItem.h \
	qt-gui/QoreAbstractQGraphicsRectItem.h \
	qt-gui/QC_QGraphicsSimpleTextItem.h \
	qt-gui/QoreAbstractQGraphicsSimpleTextItem.h \
	qt-gui/QC_QGraphicsItemGroup.h \
	qt-gui/QoreAbstractQGraphicsItemGroup.h \
	qt-gui/QC_QGraphicsLineItem.h \
	qt-gui/QoreAbstractQGraphicsLineItem.h \
	qt-gui/QC_QGraphicsPixmapItem.h \
	qt-gui/QoreAbstractQGraphicsPixmapItem.h \
	qt-gui/QC_QTextLine.h \
	qt-gui/QC_QTextOption.h \
	qt-gui/QC_QTextLayout.h \
	qt-gui/QC_QDesktopServices.h \
	qt-opengl/QC_QGLWidget.h \
	qt-opengl/QC_QGLFormat.h \
	qt-opengl/QC_QGLContext.h \
	qt-opengl/QC_QGLColormap.h \
	qt-opengl/QC_QGLFramebufferObject.h \
	qt-opengl/QC_QGLPixelBuffer.h \
	qt-svg/QC_QSvgRenderer.h \
	qt-svg/QC_QSvgGenerator.h \
	qt-svg/QC_QSvgWidget.h

EXTRA_DIST = COPYING ChangeLog AUTHORS README test/ \
	docs/qt-modules-doc.html \
	test/desktop/images/bad.svg \
	test/desktop/images/heart.svg \
	test/desktop/images/trash.svg \
	test/desktop/screenshot.q \
	test/desktop/systray.q \
	test/dialogs/classwizard.q \
	test/dialogs/configdialog.q \
	test/dialogs/extension.q \
	test/dialogs/findfiles.q \
	test/dialogs/images/background.png \
	test/dialogs/images/banner.png \
	test/dialogs/images/config.png \
	test/dialogs/images/logo1.png \
	test/dialogs/images/logo2.png \
	test/dialogs/images/logo3.png \
	test/dialogs/images/query.png \
	test/dialogs/images/update.png \
	test/dialogs/images/watermark1.png \
	test/dialogs/images/watermark2.png \
	test/dialogs/standarddialogs.q \
	test/dialogs/tabdialog.q \
	test/layouts/basiclayouts.q \
	test/layouts/borderlayout.q \
	test/opengl/2dpainting.q \
	test/opengl/framebufferobject.q \
	test/opengl/framebufferobject2.q \
	test/opengl/grabber.q \
	test/opengl/hellogl.q \
	test/opengl/images/bubbles.svg \
	test/opengl/images/cubelogo.png \
	test/opengl/images/qt4-logo.png \
	test/tutorial.q \
	test/widgets/analogclock.q \
	test/widgets/calculator.q \
	test/widgets/calendarwidget.q \
	test/widgets/charactermap.q \
	test/widgets/digitalclock.q \
	test/widgets/groupbox.q \
	test/widgets/icons.q \
	test/widgets/images/circle.png \
	test/widgets/images/open.png \
	test/widgets/images/pause.png \
	test/widgets/images/play.png \
	test/widgets/images/quit.png \
	test/widgets/images/square.png \
	test/widgets/images/stop.png \
	test/widgets/images/triangle.png \
	test/widgets/images/woodbackground.png \
	test/widgets/images/woodbutton.png \
	test/widgets/imageviewer.q \
	test/widgets/lineedits.q \
	test/widgets/movieplayer.q \
	test/widgets/scribble.q \
	test/widgets/shapedclock.q \
	test/widgets/sliders.q \
	test/widgets/spinboxes.q \
	test/widgets/styles.q \
	test/widgets/tetrix.q \
	test/widgets/tooltips.q \
	test/widgets/wiggly.q \
	test/widgets/windowflags.q \
	qore-qt.spec


